docs: update README with comprehensive configuration and usage guide
Major improvements to README.md:
- Added detailed .env configuration guide with examples
- Added step-by-step instructions for Feishu app setup
- Added LLM provider setup instructions
- Added comprehensive usage guide with examples
- Added troubleshooting section for common issues
- Updated port references from 8080 to 6000
- Added flow diagrams and architecture overview

Also created:
- CONFIGURATION_REFERENCE.md: Complete configuration reference
- FINAL_SUMMARY_OVERVIEW_FIX.md: Fix log for overview feature

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>